--- a/Oresundbron/Oresundbron.csproj
+++ b/Oresundbron/Oresundbron.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Extern DLL\" />
+  </ItemGroup>
+
 </Project>
