--- a/Oresundbron/Oresundbron.csproj
+++ b/Oresundbron/Oresundbron.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extern DLL\" />
+    <Compile Remove="Extern DLL\**" />
+    <EmbeddedResource Remove="Extern DLL\**" />
+    <None Remove="Extern DLL\**" />
   </ItemGroup>
 
 </Project>
